src/css/style.css
@charset "UTF-8";
@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap");
:root {
  font-family: "Outfit", sans-serif;
  scroll-behavior: smooth;
}

a {
  text-decoration: none;
  color: unset;
  margin: 0;
  padding: 0;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  max-width: 100vw;
}

img {
  max-width: 100%;
  margin: 0;
}

.flex {
  display: flex;
}
.flex.center {
  justify-content: center;
}
.flex.spaceAround {
  justify-content: space-around;
}
.flex.column {
  flex-direction: column;
}

body, html {
  margin: 0;
  height: 100%;
}

button {
  cursor: pointer;
  transition: all 0.2s;
}
button:hover {
  transform: scale(1.08);
  transition: all 0.2s;
}

input[type=submit] {
  cursor: pointer;
  transition: all 0.6s;
}
input[type=submit]:hover {
  background-color: #C8FF1C;
  color: black;
  transition: all 0.6s;
}

#services, #aboutUs {
  scroll-margin-top: 120px;
}

#contact {
  scroll-margin-top: 250px;
}

ul li {
  transition: all 0.2s;
}
ul li:hover {
  transform: scale(1.1);
  transition: all 0.2s;
}

.buttonWhiteBackground {
  padding: 10px;
  border-radius: 6.88px;
  font-weight: 600;
  font-size: 17px;
  width: 168px;
  border: none;
  background-color: #ffffff;
  color: rgb(0, 0, 0);
}

button.whiteBackground {
  padding: 10px;
  border-radius: 6.88px;
  font-weight: 600;
  font-size: 17px;
  width: 168px;
  border: none;
  background-color: #ffffff;
  color: rgb(0, 0, 0);
}
button.GreenBackground {
  padding: 10px;
  border-radius: 6.88px;
  font-weight: 600;
  font-size: 17px;
  width: 168px;
  border: none;
  background-color: #ffffff;
  color: rgb(0, 0, 0);
  background-color: #C8FF1C;
}
button.halfDarkBlueBackground {
  padding: 10px;
  border-radius: 6.88px;
  font-weight: 600;
  font-size: 17px;
  width: 168px;
  border: none;
  background-color: #526da0;
  color: rgb(255, 255, 255);
}
button.halfDarkBlueBackground.rounded {
  border-radius: 20px;
}

input, textarea {
  padding: 10px;
  border-radius: 6.88px;
  font-weight: 600;
  font-size: 17px;
  width: 168px;
  border: none;
  background-color: #ffffff;
  color: rgb(0, 0, 0);
}

header {
  display: flex;
  width: 100%;
  height: 120px;
  background-color: white;
  position: fixed;
  justify-content: space-around;
  align-self: center;
  align-items: center;
  -webkit-box-shadow: 0px 2px 5px -1px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 0px 2px 5px -1px rgba(0, 0, 0, 0.75);
  box-shadow: 0px 2px 5px -1px rgba(0, 0, 0, 0.75);
  z-index: 1000;
}
header .logo {
  width: 100px;
  height: 100px;
}
@media (min-width: 320px) {
  header .logo {
    width: 75px;
    height: 75px;
  }
}
@media (min-width: 1200px) {
  header .logo {
    width: 100px;
    height: 100px;
  }
}
@media (min-width: 320px) {
  header nav {
    position: absolute;
    top: 120px;
    min-height: calc(100svh - 120px);
    background-color: white;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    left: -100%;
    transition: all 1.2s;
  }
}
@media (min-width: 1200px) {
  header nav {
    display: block;
    position: static;
    width: unset;
    background-color: unset;
    min-height: unset;
  }
}
header nav.mostrar {
  left: 0;
  transition: all 1.2s;
}
header .menuIcon {
  transition: all 0.2s;
}
@media (min-width: 320px) {
  header .menuIcon {
    display: block;
    transform: scale(2.5);
  }
}
@media (min-width: 1200px) {
  header .menuIcon {
    display: none;
  }
}
header .menuIcon:hover {
  cursor: pointer;
  transform: scale(2.75);
  transition: all 0.2s;
}
header ul {
  position: relative;
  display: flex;
  justify-content: space-around;
  align-items: center;
  list-style: none;
  margin: 10px;
  padding: 10px;
  gap: 15px;
  font-weight: 600;
}
@media (min-width: 320px) {
  header ul {
    flex-direction: column;
    gap: 20px;
  }
}
@media (min-width: 1200px) {
  header ul {
    display: flex;
    flex-direction: row;
    gap: 15px;
  }
}
header ul li {
  padding: 2px 5px;
  transition: 0.2s all linear;
}
header ul li:hover {
  background-color: #0991CC;
  transition: 0.2s all linear;
  color: white;
  cursor: pointer;
}
header ul:after {
  content: "";
  display: block;
  width: calc(100% - 20px);
  height: 3px;
  background-color: #0991CC;
  margin: 10px 0;
  bottom: -3px;
  position: absolute;
}
@media (min-width: 320px) {
  header ul:after {
    content: unset;
  }
}
@media (min-width: 720px) {
  header ul:after {
    content: "";
  }
}

.afterHeader {
  display: block;
  height: 120px;
}

section.banner {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  min-height: 100vh;
  position: relative;
}
@media (min-width: 320px) {
  section.banner {
    min-height: calc(100svh - 120px);
  }
}
@media (min-width: 1200px) {
  section.banner {
    min-height: 100vh;
  }
}
section.banner .sideLBanner {
  display: block;
}
@media (min-width: 320px) {
  section.banner .sideLBanner {
    display: none;
  }
}
@media (min-width: 1200px) {
  section.banner .sideLBanner {
    display: block;
  }
}
section.banner::before {
  content: "";
  display: block;
  width: 100%;
  height: 100vh;
  position: absolute;
  left: 0;
  background-image: url("/img/banner/bordasLateraisAzuis.svg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  z-index: -1;
}
@media (min-width: 320px) {
  section.banner::before {
    height: calc(100svh - 120px);
  }
}
@media (min-width: 1200px) {
  section.banner::before {
    height: 100vh;
  }
}
section.banner::after {
  content: "";
  display: block;
  width: 100%;
  height: 100vh;
  position: absolute;
  left: 0;
  background-image: url("/img/banner/caminhoVerde.png");
  background-size: cover;
  background-repeat: no-repeat;
  z-index: -1;
}
@media (min-width: 320px) {
  section.banner::after {
    height: calc(100svh - 120px);
  }
}
/* ... */

